--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="nama">Nama Siswa</string>
     <string name="alamat">Alamat Siswa</string>
     <string name="telpon">Telpon Siswa</string>
+    <string name="nama1">Nama Siswa  :</string>
+    <string name="alamat1">Alamat Siswa :</string>
+    <string name="telpon1">Telpon Siswa :</string>
+
 
     <!-- Status -->
     <string name="loading">Loading...</string>
@@ -17,4 +21,14 @@
 
     <!-- Navigation -->
     <string name="back">Back</string>
+
+    <!-- Detail / Action -->
+    <string name="update">Update</string>
+    <string name="delete">Delete</string>
+
+    <!-- Dialog -->
+    <string name="attention">Perhatian</string>
+    <string name="tanya">Apakah Anda yakin ingin menghapus data ini?</string>
+    <string name="yes">Ya</string>
+    <string name="no">Tidak</string>
 </resources>
